--- a/public/css/default_ui.css
+++ b/public/css/default_ui.css
@@ -64,8 +64,6 @@ body{
     width: 100%;
     overflow: hidden;
     height: 60px;
-  
-
 }
 .toptab_menu{
     width: 100%;
@@ -283,10 +281,13 @@ body{
 
 .android_controls{
     width: 100%;
-    height: 7%;
+    height: 60px;
    padding-top: 3px;
     background-color: blueviolet;
-
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    
 }
 
 .controls_inner{
