--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
 	<a href="/wallet" class="R"></a>
 	<div data---="emoji"></div>
 	<div data---="animation__null__style:5;together:true;">
-	<div data---="splashscreen__null__timeout:10000" class="ui-splashscreen">
+	<div data---="splashscreen__null__timeout:5000" class="ui-splashscreen">
         <script type="text/html">
 			<div><i  class="fa fa-comment-dots splash"></i></div>
            <h1>SendMe</h1>
@@ -191,7 +191,7 @@
 		}
 
 
-		MAIN.bottomH = $('.android_controls').height();
+		MAIN.bottomH = 60;
         MAIN.topH = 60;
 		var bottomTopH = MAIN.bottomH + MAIN.topH;
         var H = WH - bottomTopH;
