Fixed chat footer not show/hiden

--- a/views/index.html
+++ b/views/index.html
@@ -230,7 +230,8 @@
 			$('.body_section').removeClass('hidden');
 			$('.wallet').addClass('hidden');
 			$('.marketplace').addClass('hidden');
-
+			$('.chat_footer').removeClass('hidden');
+			$('.android_controls').addClass('hidden');
 			$('.ion-ios-search').hide();
 			var md = this;
 			var arr = md.href.split('/');
