--- a/views/index.html
+++ b/views/index.html
@@ -100,6 +100,13 @@
 			</div>
 			<div class="title_bar animation">
 				<div class="title_top">
+					<div class="row">
+						<div id="balance">
+							XOF : 6 543 000
+						</div>
+						<div id="deposit">Dépot</div>
+						<div id="withdraw">Retrait</div>
+					</div>
 					
 				</div>
 				<div class="toptab_bar">
