Added default blue theme

--- a/views/index.html
+++ b/views/index.html
@@ -14,20 +14,18 @@
 	<link rel="apple-touch-icon" href="/img/icon.png" />
 	<link rel="stylesheet" href="/ionic/css/ionicons.min.css">
 	@{import('head', 'meta', 'spa.min@18.js', 'spa.min@18.css', 'default_ui.css','chat.css','style.css', 'manifest')}
-
-
 	<style>
 
 		.chat_header{border-bottom: 1px solid lightgrey;}
 		.chat_header{border-bottom: 1px solid lightgrey;}
 		.chat_headerAvatar {border:0.5px solid #fff;}
 		.chat_headerAvatar {border:0.5px solid #fff;}
-		.chat_footer{border-top: 1px solid lightgrey;background-color: #ED4F05;}
+		.chat_footer{border-top: 1px solid lightgrey;background-color: #2C3DD6;}
 		.chat_footer > form > .ion {padding: 5px; color: white;}
 		.chat_footer > .ion {padding: 5px; color: white;cursor :pointer;font-size: 35px;}
-		.ui-splashscreen{background-color: #ED4F05!important;color: white!important;}
-		.container{background-color: #ED4F05;}
-		.title_bar{background-color: #ED4F05;}
+		.ui-splashscreen{background-color: #2C3DD6!important;color: white!important;}
+		.container{background-color: #2C3DD6;}
+		.title_bar{background-color: #2C3DD6;}
 		.title_container{color : white;}
 		.single_tab{border-bottom: solid 3px transparent;color: white;}      
 		.single_tab:hover, .active{color: white;border-color: white;}
@@ -38,16 +36,16 @@
 		.messages_section a{color: black;}
 		.single_chat{background-color: white;}
 		.single_chat:after{background-color: white;}
-		.user_name{color: #ED4F05;}
+		.user_name{color: #2C3DD6;}
 		.user_name .last_message{color: grey;}
 		.user_name  .count{background-color: #00d260;color: white;}
 		.user_name .lastupdate, .count,  .read{color: #00d260; }
 		.read{color: rgba(165,165,165,0.8)!important;}
-		.android_controls{background-color: #ED4F05;}
+		.android_controls{background-color: #2C3DD6;}
 		.lightbox_container{background-color:white;}
-		.lightbox_controls{background-color: #ED4F05;}
+		.lightbox_controls{background-color: #2C3DD6;}
 		.one_control i{color: white;}
-		.back_trigger i{color: #ED4F05;}
+		.back_trigger i{color: #2C3DD6;}
 		.back_button i{color:white;}
 		.dropdown_item{background-color: white;}
 		.dropdown_item:hover{color : white;background-color: rgb(165,165,165);}
@@ -58,7 +56,7 @@
 		.chatbody{ width: 100%; background-image: url('../backgrounds/bg.png');background-repeat: repeat;background-position: center;padding: 25px;}
 		.chat_message{ font-family: "Helvetica Heue Light"; position: relative;font-size:16px;padding: 10px;border-radius: 10px; background-color: #fff;margin-bottom: 30px;max-width:70%;}
 		.chat_messageBodyMetaTimeStamp{ margin-left:10px;font-size: xx-small; color: grey;}
-		.chat_receiver{margin-left:auto;background-color: #ED4F05; color: white;}
+		.chat_receiver{margin-left:auto;background-color: #2C3DD6; color: white;}
 	</style>
 </head>
 <body data---="exec">
@@ -107,7 +105,6 @@
 						<div id="deposit">Dépot</div>
 						<div id="withdraw">Retrait</div>
 					</div>
-					
 				</div>
 				<div class="toptab_bar">
 					
