--- a/public/css/default_ui.css
+++ b/public/css/default_ui.css
@@ -50,15 +50,15 @@ body{
 .title_bar{
     background-color: blueviolet;
     width: 100%;
-    height: 150px;
+    height: 210px;
 }
 .title_top{
     overflow: hidden;
     width: 100%;
     display: flex;
-    color:  blueviolet;
-    background-color: white;
-    height: 90px;
+    color:  white;
+    background-color: #4150d1;
+    height: 150px;
 }
 .botomtab_menu{
     width: 100%;
@@ -595,3 +595,10 @@ textarea:focus, input:focus{
     align-items: center;
 
 }
+@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i');
+
+*{
+  box-sizing:border-box;
+  font-family: 'Space Mono', monospace;
+}
+
